--- a/barchart.html
+++ b/barchart.html
@@ -10,19 +10,20 @@
 			
 			var data_values = [5,10,30,8,45,24,16,55,60];
 
-			var p = d3.selectAll("p") 
-						.data(data_values)
-						.enter()
-						.append("p")
-						.text(function(value){ return value; });
-
 			var svg = d3.select("body")
 						.append("svg")
 						.attr({"width":450, "height":400})
 
-			svg.append("circle").attr({"r":"30px", "fill":"red", "cx":"50px", "cy":"50px",});
-			
-			p.style({"font-size":"20px","font-family":"arial"});
+			var bars = svg.selectAll("rect")
+				.data(data_values)
+				.enter()
+				.append("rect")
+				.attr("x", function(d, i){ return i*30; })
+				.attr("width","25px")
+				.attr("height", function(d){ return d*2; });
+
+			bars.attr("fill", "blue");
+
 		</script>
 	</body>
 </html>
