--- a/barchart.html
+++ b/barchart.html
@@ -8,7 +8,10 @@
 	<body>
 		<script type="text/javascript">
 			
-			var data_values = [5,10,30,8,45,24,16,55,60];
+			var data_values = [5,10,30,8,45,24,16,55,60,26,75,90,36,55,80];
+
+			var max = d3.max(data_values);
+			var min = d3.min(data_values);
 
 			var svg = d3.select("body")
 						.append("svg")
@@ -20,9 +23,13 @@
 				.append("rect")
 				.attr("x", function(d, i){ return i*30; })
 				.attr("width","25px")
-				.attr("height", function(d){ return d*2; });
+				.attr("height", function(d){ return d*3; })
+				.attr("y", function(d) {return 400-d*3})
+				.attr("fill", "steelblue");
+			bars.filter(function(d){ return d==min; }).attr("fill", "red");
+			bars.filter(function(d){ return d==max; }).attr("fill","green");
 
-			bars.attr("fill", "blue");
+			
 
 		</script>
 	</body>
